--- a/exercícios/ex023/tabela001.html
+++ b/exercícios/ex023/tabela001.html
@@ -10,5 +10,35 @@
 </head>
 <body>
     <h1>Minha primeira tabela</h1>
+	<!--
+		Hierarquia de tabelas (simples)
+		TABLE = tabela
+		TABLE ROW = Linha de tabela
+		TABLE HEADER = Cabeçalho de tabela
+		TABLE DATA = dado de tabela
+	-->
+	
+	<table>
+		<tr>
+			<td>A1</td>
+			<td>B1</td>
+			<td>C1</td>
+		</tr>
+		<tr>
+			<td>A2</td>
+			<td>B2</td>
+			<td>B3</td>
+		</tr>
+		<tr>
+			<td>A3</td>
+			<td>B3</td>
+			<td>C3</td>
+		</tr>
+		<tr>
+			<td>A4</td>
+			<td>B4</td>
+			<td>C4</td>
+		</tr>
+	</table>
 </body>
 </html>
