--- a/exercícios/ex023/tabela001.html
+++ b/exercícios/ex023/tabela001.html
@@ -5,7 +5,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tabelas</title>
 	<style type="text/css">
-		
+		body{
+			font-family: Arial, Helvetica, sans-serif;
+		}
+		table{
+			width: 400px;
+			border-collapse: collapse;
+		}
+		tr.linha{
+			background-color: gray;
+		}
+		td.dado{
+			background-color: yellow;
+		}
+		td{
+			border: 1px solid black;
+			padding: 8px;
+		}
 	</style>
 </head>
 <body>
@@ -24,10 +40,10 @@
 			<td>B1</td>
 			<td>C1</td>
 		</tr>
-		<tr>
+		<tr class="linha">
 			<td>A2</td>
 			<td>B2</td>
-			<td>B3</td>
+			<td>C3</td>
 		</tr>
 		<tr>
 			<td>A3</td>
@@ -36,7 +52,7 @@
 		</tr>
 		<tr>
 			<td>A4</td>
-			<td>B4</td>
+			<td class="dado">B4</td>
 			<td>C4</td>
 		</tr>
 	</table>
