--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -14,6 +14,7 @@
 		}
 		td, th{
 			border: 1px solid black;
+			padding: 10px;
 		}
 		caption{
 			font-size: 1.5em;
@@ -46,7 +47,7 @@
 		<thead>
 			<tr>
 				<th scope="col">Estado</th>
-				<th scope="col">População</th>
+				<th scope="col" style="width: 100px;">População</th>
 			</tr>
 		</thead>
 		<tbody>
