--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -23,12 +23,10 @@
 	</style>
 </head>
 <body>
-    <h1>Exercício de tabelas</h1>
 	
 	<table>
-		<caption>Filmes favoritos</caption>
 		<thead>
-			<th scope="col">Grupos</th>
+			<th scope="col" rowspan="2">Área</th>
 			<th scope="col">Nomes</th>
 			<th scope="colgroup" colspan="3">Filmes</th>
 		</thead>
