--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -26,52 +26,63 @@
 	
 	<table>
 		<thead>
-			<th scope="col" rowspan="2">Área</th>
-			<th scope="col">Nomes</th>
-			<th scope="colgroup" colspan="3">Filmes</th>
+			<tr>
+				<th scope="col" rowspan="2">Área</th>
+				<th scope="col" rowspan="2">Disciplinas</th>
+				<th scope="colgroup" colspan="2">Notas</th>
+				<th rowspan="2">Média</th>
+			</tr>
+			<tr>
+				<th>Nota 1</th>
+				<th>Nota 2</th>
+			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<th scope="rowgroup" rowspan="3">Mulheres</th>
-				<td>Ana Maria Santos</td>
-				<td>Alien</td>
-				<td>Rambo</td>
-				<td>Vingadores</td>
+				<th rowspan="4">Exatas</th>
+				<td>Matemática</td>
+				<td>4.5</td>
+				<td>6.5</td>
+				<td>7</td>
 			</tr>
 			<tr>
-				<td>Beatriz Souza</td>
-				<td>Hulk</td>
-				<td>Inception</td>
-				<td>Batman</td>
+				<td>Física</td>
+				<td>5</td>
+				<td>4</td>
+				<td>10</td>
 			</tr>
 			<tr>
-				<td>Cláudia Melo</td>
-				<td>Oblivion</td>
-				<td>Matrix</td>
-				<td>Big Hero</td>
+				<td>Química</td>
+				<td>2</td>
+				<td>4</td>
+				<td>8</td>
 			</tr>
 			<tr>
-				<th scope="rowgroup" rowspan="3">Homens</th>
-				<td>Bruno Mendonça</td>
-				<td>Intocáveis</td>
-				<td>Amnésia</td>
-				<td>Gladiador</td>
+				<td>Biologia</td>
+				<td>5.5</td>
+				<td>6.4</td>
+				<td>10</td>
 			</tr>
 			<tr>
-				<td>Daniel Lourenço</td>
-				<td>Wall-E</td>
-				<td>Oldboy</td>
-				<td>Dangal</td>
+				<th colspan="4">Média de Exatas</th>
+				<td>9</td>
 			</tr>
 			<tr>
-				<td>Fabiano Mota</td>
-				<td>Star Wars V</td>
-				<td>Taxi Driver</td>
-				<td>Toy Story</td>
+				<th rowspan="2">Humanas</th>
+				<td>História</td>
+				<td>5.5</td>
+				<td>6.4</td>
+				<td>10</td>
 			</tr>
 			<tr>
-				<th scope="row" colspan="4">Total</th>
-				<td>1000</td>
+				<td>Goegrafia</td>
+				<td>5.5</td>
+				<td>6.4</td>
+				<td>10</td>
+			</tr>
+			<tr>
+				<th colspan="4">Média de Exatas</th>
+				<td>9</td>
 			</tr>
 		</tbody>
 	</table>
