--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -5,84 +5,95 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tabelas</title>
 	<style type="text/css">
-		body{
-			font-family: Arial, Helvetica, sans-serif;
-		}
-		table{
-			border-collapse: collapse;
-		}
-		caption{
-			font-size: 1.3em;
-			font-weight: bold;
-			padding: 10px;
-		}
-		th, td{
-			border: 1px solid gray;
-			padding: 10px;
-		}
+		 body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        table {
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+        }
+        .centro {
+            text-align: center;
+        }
+
+        .esquerda {
+            text-align: left;
+        }
+
+        .inverso {
+            background-color: #7e7e7e;
+            color: white;
+        }
+
+        .realce {
+            font-weight: bolder;
+        }
 	</style>
 </head>
 <body>
 	
 	<table>
 		<thead>
-			<tr>
+			<tr class="inverso">
 				<th scope="col" rowspan="2">Área</th>
 				<th scope="col" rowspan="2">Disciplinas</th>
 				<th scope="colgroup" colspan="2">Notas</th>
 				<th rowspan="2">Média</th>
 			</tr>
-			<tr>
-				<th>Nota 1</th>
-				<th>Nota 2</th>
+			<tr class="inverso">
+				<th scope="col">Nota 1</th>
+				<th scope="col">Nota 2</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<th rowspan="4">Exatas</th>
+				<th scope="rowgroup" rowspan="4">Exatas</th>
 				<td>Matemática</td>
-				<td>4.5</td>
-				<td>6.5</td>
-				<td>7</td>
+				<td class="centro">4.5</td>
+				<td class="centro">6.5</td>
+				<td class="centro">7</td>
 			</tr>
 			<tr>
 				<td>Física</td>
-				<td>5</td>
-				<td>4</td>
-				<td>10</td>
+				<td class="centro">5</td>
+				<td class="centro">4</td>
+				<td class="centro">10</td>
 			</tr>
 			<tr>
 				<td>Química</td>
-				<td>2</td>
-				<td>4</td>
-				<td>8</td>
+				<td class="centro">2</td>
+				<td class="centro">4</td>
+				<td class="centro">8</td>
 			</tr>
 			<tr>
-				<td>Biologia</td>
-				<td>5.5</td>
-				<td>6.4</td>
-				<td>10</td>
+				<td >Biologia</td>
+				<td class="centro">5.5</td>
+				<td class="centro">6.4</td>
+				<td class="centro">10</td>
+			</tr>
+			<tr class="inverso">
+				<th scope="row" colspan="4" class="esquerda">Média de Exatas</th>
+				<td class="centro realce">9</td>
 			</tr>
 			<tr>
-				<th colspan="4">Média de Exatas</th>
-				<td>9</td>
-			</tr>
-			<tr>
-				<th rowspan="2">Humanas</th>
+				<th scope="rowgroup" rowspan="2">Humanas</th>
 				<td>História</td>
-				<td>5.5</td>
-				<td>6.4</td>
-				<td>10</td>
+				<td class="centro">5.5</td>
+				<td class="centro">6.4</td>
+				<td class="centro">10</td>
 			</tr>
 			<tr>
 				<td>Goegrafia</td>
-				<td>5.5</td>
-				<td>6.4</td>
-				<td>10</td>
+				<td class="centro">5.5</td>
+				<td class="centro">6.4</td>
+				<td class="centro">10</td>
 			</tr>
-			<tr>
-				<th colspan="4">Média de Exatas</th>
-				<td>9</td>
+			<tr class="inverso">
+				<th scope="rowgroup" colspan="4" class="esquerda">Média de Humanas</th>
+				<td class="centro realce">9</td>
 			</tr>
 		</tbody>
 	</table>
