--- a/exercícios/ex024/iframe001.html
+++ b/exercícios/ex024/iframe001.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Testanto o uso de iframes</h1>
-    <p>Acessando o site do curso em video para aprender a programar</p>
+    <p>Acessando o site do 
+        <iframe src="https://cursoemvideo.com/" frameborder="0">
+
+        </iframe>
+            para aprender a programar</p>
 </body>
 </html>
