--- a/exercícios/ex024/iframe001.html
+++ b/exercícios/ex024/iframe001.html
@@ -12,5 +12,9 @@
 
         </iframe>
             para aprender a programar</p>
+            <p>
+                Site do Google
+                <iframe src="https://www.google.com/" frameborder="0"></iframe>
+            </p>
 </body>
 </html>
