--- a/exercícios/ex024/iframe001.html
+++ b/exercícios/ex024/iframe001.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudo de iframes</title>
+    <style>
+        iframe{
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testanto o uso de iframes</h1>
     <p>Acessando o site do 
-        <iframe src="https://cursoemvideo.com/" frameborder="0">
+        <iframe src="https://cursoemvideo.com/" frameborder="0" height="500px" scolling="no">
 
         </iframe>
             para aprender a programar</p>
             <p>
-                Site do Google
-                <iframe src="https://www.google.com/" frameborder="0"></iframe>
+                Site do GitHub
+                <iframe src="https://dener44.github.io/" frameborder="0" height="500"></iframe>
             </p>
 </body>
 </html>
