--- a/exercícios/ex024/iframe002.html
+++ b/exercícios/ex024/iframe002.html
@@ -26,8 +26,8 @@
         the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
         and more recently with desktop publishing software like Aldus PageMaker including 
         versions of Lorem Ipsum.</p>
-        <iframe src="pag001.html" frameborder="0" height="400px">
-
+        <iframe src="paginas-extras/pag001.html" frameborder="0" height="400px">
+            <p class="erro">Seu navegador não é compatível com isso</p>
         </iframe>
         <p>What is Lorem Ipsum?
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
