--- a/exercícios/ex024/iframe003.html
+++ b/exercícios/ex024/iframe003.html
@@ -24,8 +24,10 @@
         <li><a href="paginas-extras/pag003.html" target="frame">Terceira página</a></li>
     </ul>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto expedita officia quia nulla enim libero ipsam eius, perferendis sequi, ullam cupiditate asperiores debitis laborum praesentium delectus obcaecati nihil alias!</p>
-    <iframe src="" id="tela" name="frame">
+    <iframe src="" id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1> <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto expedita officia quia nulla enim libero ipsam eius, perferendis sequi, ullam cupiditate asperiores debitis laborum praesentium delectus obcaecati nihil alias!</p>">
         <p>Seu navegador não é compatível</p>
     </iframe>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto expedita officia quia nulla enim libero ipsam eius, perferendis sequi, ullam cupiditate asperiores debitis laborum praesentium delectus obcaecati nihil alias!</p>
+    
 </body>
 </html>
