--- a/exercícios/ex024/iframe004.html
+++ b/exercícios/ex024/iframe004.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     <h1>Meu site principal</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt omnis amet a quaerat impedit error veritatis quam iusto temporibus? Vitae iste nulla a alias dicta mollitia odit aliquam, repudiandae modi?</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt omnis amet a quaerat impedit error veritatis quam iusto temporibus? Vitae iste nulla a alias dicta mollitia odit aliquam, repudiandae modi?</p>
-    <iframe src="paginas-extras/pag004.html" sandbox="sandbox" referrerpolicy="no-referer">
+    <iframe src="paginas-extras/pag004.html" sandbox="allow-same-origin allow-scripts" referrerpolicy="no-referer">
 
     </iframe>
 </body>
