--- a/exercícios/ex025/form001.html
+++ b/exercícios/ex025/form001.html
@@ -12,11 +12,13 @@
 </head>
 <body>
     <h1>Meu primeiro formulário</h1>
-    <form action="">
-        <p>Nome:</p>
-        <input type="text" name="nome" id="nome">
-        <p>Sobrenome:</p>
-        <input type="text" name="sobrenome" id="sobrenome">
+    <form action="cadastro.php" method="post" autocomplete="off">
+        <p><label for="inome">Nome:</label> 
+            <input type="text" name="nome" id="inome">
+        </p>
+        <p><label for="isobrenome">Sobrenome:</label> 
+            <input type="text" name="sobrenome" id="isobrenome">
+        </p>
         <input type="submit" value="Enviar">
     </form>
 </body>
