--- a/exercícios/ex025/form004.html
+++ b/exercícios/ex025/form004.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
+    <form action="">
+    <p>
+        <label for="iemail">Email</label>
+        <input type="email" name="email" id="iemail">
+    </p>
+
+    </form>
 </body>
 </html>
