--- a/exercícios/ex025/form004.html
+++ b/exercícios/ex025/form004.html
@@ -7,12 +7,19 @@
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
-    <form action="">
+    <form action="cadastro.php" method="get" autocomplete="on">
     <p>
         <label for="iemail">Email</label>
-        <input type="email" name="email" id="iemail">
+        <input type="email" name="email" id="iemail" required autocomplete="email">
     </p>
-
+    <p>
+        <label for="itel">Telefone</label>
+        <input type="tel" name="tel" id="itel" required>
+    </p>
+    <p>
+        <input type="submit" value="Enviar">
+        <input type="reset" value="Limpar">
+    </p>
     </form>
 </body>
 </html>
