--- a/exercícios/ex025/form004.html
+++ b/exercícios/ex025/form004.html
@@ -8,18 +8,25 @@
 <body>
     <h1>Exemplo de Formulário</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
-    <p>
-        <label for="iemail">Email</label>
-        <input type="email" name="email" id="iemail" required autocomplete="email">
-    </p>
-    <p>
-        <label for="itel">Telefone</label>
-        <input type="tel" name="tel" id="itel" required>
-    </p>
-    <p>
-        <input type="submit" value="Enviar">
-        <input type="reset" value="Limpar">
-    </p>
+    <fieldset>
+        <p>
+            <label for="inome">Nome</label>
+            <input type="text" name="nome" id="inome" minlength="5" maxlength="20" required>
+        </p>
+        <p>
+            <label for="iemail">Email</label>
+            <input type="email" name="email" id="iemail" required autocomplete="email">
+        </p>
+        <p>
+            <label for="itel">Telefone</label>
+            <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^[0-9]{5}-[0-9]{4}$" required>
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
+    </fieldset>
+    
     </form>
 </body>
 </html>
