--- a/exercícios/ex025/form004.html
+++ b/exercícios/ex025/form004.html
@@ -9,6 +9,7 @@
     <h1>Exemplo de Formulário</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
     <fieldset>
+        <legend>Dados pessoais</legend>
         <p>
             <label for="inome">Nome</label>
             <input type="text" name="nome" id="inome" minlength="5" maxlength="20" required>
@@ -19,7 +20,7 @@
         </p>
         <p>
             <label for="itel">Telefone</label>
-            <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^[0-9]{5}-[0-9]{4}$" required>
+            <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^\(\d{2}\)\d{4,5}-\d{4}$" required placeholder="(xx) xxxx-xxxx">
         </p>
         <p>
             <input type="submit" value="Enviar">
