--- a/exercícios/ex025/form006.html
+++ b/exercícios/ex025/form006.html
@@ -7,8 +7,19 @@
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
-    <form action="cadastro.php">
-       
+    <form action="cadastro.php" method="get">
+       <p>
+        <label for="icor">Cor:</label>
+        <input type="color" name="cor" id="icor">
+       </p>
+       <p>
+        <label for="inivel">Nivel de Satisfação</label>
+        <input type="range" name="nivel" id="inivel" min="1" max="5">
+       </p>
+       <p>
+        <label for="ifoto">Foto do perfil</label>
+        <input type="file" name="foto" id="ifoto">
+       </p>
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
